--- a/css/style.css
+++ b/css/style.css
@@ -39,14 +39,18 @@ h1,h2,h3,p,ul{
     text-transform: none;
 }
 
-
+.vid{
+    margin-bottom: 100px;
+}
 
 
 footer{
     background-color: black;
     bottom: 0;
+    left: 0;
     width: 100%;
     margin: 0;
+    position:fixed;
 }
 
 .chari {
